2007-08-01  Andreas Kupries  <andreask@activestate.com>

	* pop3.test: Updated to new snit dependency in comm.

2007-03-21  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* pop3.man: Fixed all warnings due to use of now deprecated
	  commands. Added a section about how to give feedback.

2006-10-29  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* pop3.test: Made pop3-0.5 more robust, accept more than just
	  'connection refused' as proper failure to connect. Like 'timed
	  out'.

2006-10-03  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	*
	* Released and tagged Tcllib 1.9 ========================
	* 

2006-09-28  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* pop3.test: Added use of local log package, fixed bug in dialog
	  setup for testcases pop3-2.4 and -2.5, extended these two test
	  cases to have the dialog trace in their result.

2006-01-28  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* pop3.test: Fixed cleanup of temp. files used by testsuite.

2006-01-23  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* pop3.test: More boilerplate simplified via use of test support.

2006-01-19  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* pop3.test: Hooked into the new common test support code.

2006-01-10  Andreas Kupries <andreask@activestate.com>

	* pop3.test: Fixed [SF Tcllib Bug 1316056]. Uncluttering test
	  output.

2005-10-06  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	*
	* Released and tagged Tcllib 1.8 ========================
	* 

2004-10-12  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* clnt.tcl: Removed old unused code. It was part of the testsuite
	* srv.tcl:  in the very beginning. It was unused in the first
	  rewrite to the old sub process and dialog facility.

	* pop3.test: Rewritten to use the new facilities for programmed
	  interaction and sub processes.

	* pop3.tcl (::pop3::open): Capitalized the user and pass